# project-shared-library-py

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  MANIFEST.in  README.rst  pyproject.toml  requirements.txt
.github/workflows/: default.yml  deps-review.yml
requirements/: build.txt  run.txt  test.txt
shared_library/config/: __init__.py  app.py  chat_model.py  mcp_client.py
shared_library/langchain_exts/: abstract_tool.py
shared_library/logging/: __init__.py
shared_library/logging/filters/: __init__.py  error.py  non_error.py
shared_library/logging/handlers/: __init__.py  stderr.py  stdout.py
shared_library/mcp/: __init__.py
shared_library/mcp/server/: __init__.py  abstract_tool.py
shared_library/pydantic_exts/: __init__.py  singleton.py
shared_library/singleton/: __init__.py  meta.py
shared_library/static/: __init__.py  meta.py
shared_library/tests/: conftest.py
shared_library/tests/config/: test_app.py  test_chat_model.py  test_mcp_client.py
shared_library/tests/langchain_exts/: test_abstract_tool.py
shared_library/tests/logging/: test_logging.py
shared_library/tests/logging/filters/: test_error.py  test_non_error.py
shared_library/tests/logging/handlers/: test_stderr.py  test_stdout.py
shared_library/tests/mcp/server/: test_abstract_tool.py
shared_library/tests/pydantic_exts/: test_singleton.py
shared_library/tests/singleton/: test_meta.py
shared_library/tests/static/: test_meta.py
