[build-system]
requires = ["setuptools", "setuptools_scm", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "shared-library"
authors = [
  {name = "Blake Randall", email = "1623620+BlakeRandall@users.noreply.github.com"},
]
requires-python = ">=3.12"
license-files = ["LICENSE"]
dynamic = [
    "version",
    "readme",
    "dependencies",
    "optional-dependencies"
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.dynamic]
[tool.setuptools.dynamic.readme]
    file = ["README.rst"]

[tool.setuptools.dynamic.dependencies]
    file = ["requirements/run.txt"]

[tool.setuptools.dynamic.optional-dependencies.build]
    file = ["requirements/build.txt"]

[tool.setuptools.dynamic.optional-dependencies.test]
    file = ["requirements/test.txt"]

[tool.setuptools.dynamic.optional-dependencies.run]
    file = ["requirements/run.txt"]

[tool.setuptools_scm]
version_file = "VERSION.txt"
fallback_version = "0.0.0"
version_scheme = "guess-next-dev"
local_scheme = "dirty-tag"

[tool.pytest.ini_options]
required_plugins = ["pytest-cov", "pytest-asyncio", "anyio"]
addopts = [
    "-x",
    "--durations=0",
    "--cov=shared_library",
    "--cov-report=term",
]
testpaths = [
    "shared_library/tests",
]
log_level = "DEBUG"
log_format = "%(asctime)s -[%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)"
log_date_format = "%Y-%m-%d %H:%M:%S"
log_cli = true
log_cli_level = "DEBUG"
log_cli_format = "%(asctime)s -[%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"

[tool.coverage.paths]
source = [
    "shared_library"
]

[tool.coverage.run]
omit = [
    "shared_library/tests/**"
]
branch = true

[tool.coverage.report]
omit = [
    "shared_library/tests/**"
]
show_missing = true
fail_under = 90

[tool.ruff]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]
line-length = 88
indent-width = 4
target-version = "py312"

[tool.ruff.lint]
select = ["E", "W", "F", "C", "D", "N"]
ignore = []
fixable = ["ALL"]
unfixable = []
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = false
docstring-code-line-length = "dynamic"
